Fix scrollbar and add title

--- a/assets/css/zuck.css
+++ b/assets/css/zuck.css
@@ -438,7 +438,7 @@
 
 }
 .scroll::-webkit-scrollbar {
-  width: 7px;
+  width: 4px;
   -webkit-appearance: none;
   border-radius: 4px;
 }
